Fix styles/cinematic alignment and sizes

--- a/styles/cinematic/align.css
+++ b/styles/cinematic/align.css
@@ -16,19 +16,12 @@ main h1 {
 nav {
   text-align: left;
 }
-nav details {
+nav a,
+nav details,
+nav summary {
   vertical-align: top;
 }
-nav #home {
-  text-align: center;
-}
 /* align others */
-#icons,
-#jump,
-#klf,
-#last {
-  text-align: center;
-}
 #icons img {
   vertical-align: middle;
 }
