--- a/styles/cinematic/border.css
+++ b/styles/cinematic/border.css
@@ -3,17 +3,13 @@ Border type, thickness, radius, etc.
 https://www.w3schools.com/css/css_border.asp
 */
 :root {
-  --border: thin solid;
-  --radius: 4px;
+  --border: thin double;
 }
 /* border main */
-main {
-  border-radius: var(--radius);
-}
+main,
 main blockquote,
 main pre {
   border: var(--border);
-  border-radius: var(--radius);
 }
 main h2 {
   border-bottom: var(--border);
@@ -26,27 +22,10 @@ main table td {
   border: var(--border);
 }
 /* border nav */
-nav,
-nav a,
-nav details {
-  border-radius: var(--radius);
-}
 nav summary {
   border-bottom: var(--border);
 }
 /* border others */
-#icons {
-  border-radius: var(--radius);
-}
 #icons img {
   border: 2px solid;
-  border-radius: var(--radius);
-}
-#jump,
-#jump a {
-  border-radius: var(--radius);
-}
-#klf,
-#last {
-  border-radius: var(--radius);
 }
